Improve Projects list

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 		<a href="https://github.com/Voklen">Alex Gorichev</a>
 	</p>
 
+	<h2>Projects</h2>
 	<ul>
-		<li><a href="/satatama/index.html">satatama</a></li>
+		<li><a href="/satatama/index.html">satatama</a> - OLL naming tool</li>
 	</ul>
 </body>
 
